--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-winston": "^4.2.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^6.6.1",
-    "validator": "^13.15.15"
+    "validator": "^13.15.23",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -37,6 +41,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.2",
     "eslint-plugin-import": "^2.32.0",
+    "gh-pages": "^6.3.0",
     "nodemon": "^3.1.10",
     "prettier": "^2.8.8"
   }
